# tiktokApp

./: .bashrc  .env.example  .eslintrc  .eslintrc.json  .gitignore  .prettierrc  .profile  .txt  CHANGELOG.md  CNAME  Dockerfile  README.md  build.sh  fix_emojis.sh  generate_emoji_overlays.py  index.html  install.sh  install_emoji_fonts.sh  install_python_deps.sh  package-lock.json  package.json  requirements.txt  tailwind.config.cjs  test_ass_generation.py  tsconfig.json  verify_system.sh  vite.config.ts
.github/workflows/: build.yml
docs/: GEMINI.md
emoji_images/: emoji_map.json
installer/: Dockerfile  README.md  common.sh  setup_build_env.sh
installer/gui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
installer/gui/src/: App.css  App.tsx  index.css
installer/gui/src-tauri/: Cargo.toml  tauri.conf.json
installer/gui/src-tauri/scripts/: install_docker.sh
installer/gui/src-tauri/src/: main.rs
scripts/: generate_emoji_overlays.py  install_emoji_fonts.sh  install_ffmpeg.sh  install_python_deps.sh  verify_system.sh  whisper_transcribe.py
src/: App-Original.tsx  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  subtitle.rs
src-tauri/src/ai/: mod.rs  whisper.rs
src-tauri/src/commands/: clips.rs  export.rs  mod.rs  subtitle.rs  transcribe.rs  youtube.rs
src-tauri/src/video/: clipper.rs  emoji_overlay.rs  ffmpeg.rs  mod.rs  subtitles.rs  youtube.rs
src/components/: ClipCreator.tsx  ExportPresets.tsx  ProgressIndicator.tsx  SubtitleGenerator.tsx  SubtitlePreview.tsx  SystemCheck.tsx
src/hooks/: useVideoProcessing.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: format.ts
tests/: test_output.ass  test_subtitle_system.sh
