[package]
name = "short-studio-mvp"
version = "2.0.0"
edition = "2021"
authors = ["TikTok Clip Studio Team"]
description = "Professional video editing suite for TikTok content creation"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "fs", "time"] }
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = []

[profile.release]
opt-level = 3

