[package]
name = "short-studio-mvp"
version = "2.0.0"
edition = "2021"

[build-dependencies]

tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = 3

