[package]
name = "tiktok-installer"
version = "1.0.0"
description = "TikTok App Installer"
authors = ["TikTok Clip Studio Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[features]
# By default, Tauri runs in production mode.
# When `tauri dev` runs, it is executed with `cargo run --no-default-features` if `devPath` is a URL.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
